--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -22,5 +22,5 @@ jobs:
         ref: 2024-01
         path: "./otus-homeworks/"
 
-    # - name: Run tests
-    #   run: curl https://raw.githubusercontent.com/express42/otus-homeworks/2024-01/run.sh | bash
+    - name: Run tests
+      run: curl https://raw.githubusercontent.com/express42/otus-homeworks/2024-01/run.sh | bash
